# Sending-Email-Integration

./: README.md  pyproject.toml
.github/workflows/: ci.yml
send_email_integration/: api.py  hooks.py  modules.txt
send_email_integration/send_email_integration/doctype/send_email_record/: send_email_record.js  send_email_record.json  send_email_record.py  test_send_email_record.py
send_email_integration/send_email_integration/doctype/sending_settings/: sending_settings.js  sending_settings.json  sending_settings.py  test_sending_settings.py
