[project]
name = "send_email_integration"
authors = [
    { name = "ahmed atef", email = "ahmedatef93legend@gmail.com"}
]
description = "Resend.com Email Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "resend==2.5.1",
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
resend = "2.5.1"
# package_name = "~=1.1.0"
